TestCases/ASTTests/SemanticErrorsTests/tests/test35.c
float foo(){

}

char bar(){
}

int main(){

}